force-app/main/default/objects/mcdm_15__Bulk_Send_Batch__c/mcdm_15__Bulk_Send_Batch__c.object-meta.xml
<CustomObject>
    <label>Bulk Send Batch</label>
    <nameField>
        <displayFormat>DMBSB-{00000}</displayFormat>
        <label>Bulk Send Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Send Batchs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>