force-app/main/default/objects/mcdm_15__Bulk_Send_Batch__c/fields/mcdm_15__CSV_Row_Number__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__CSV_Row_Number__c</fullName>
    <label># CSV Rows Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>