force-app/main/default/objects/mcdm_15__Bulk_Send_Batch__c/fields/mcdm_15__Current_CSV_Processing__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Current_CSV_Processing__c</fullName>
    <formula>&apos;DM_Bulk_Send&apos; + TEXT(mcdm_15__CSV_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current CSV Processing</label>
    <type>Text</type>
</CustomField>