force-app/main/default/objects/mcdm_15__Bulk_Send_Batch__c/fields/mcdm_15__Has_Errors__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Has_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Errors</label>
    <type>Checkbox</type>
</CustomField>