force-app/main/default/objects/mcdm_15__Bulk_Send_Batch__c/fields/mcdm_15__Members__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Members__c</fullName>
    <description>Number of members on this chunk.</description>
    <label># Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>