force-app/main/default/objects/mcdm_15__Bulk_Send_Batch__c/fields/mcdm_15__Queueable_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Queueable_Job_Id__c</fullName>
    <description>Queueable apex job ID</description>
    <label>Queueable Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>