force-app/main/default/objects/mcdm_15__Bulk_Send_Batch__c/fields/mcdm_15__Total_CSVs__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Total_CSVs__c</fullName>
    <label># CSVs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>